fixed the card overflow problem

--- a/style.css
+++ b/style.css
@@ -88,6 +88,8 @@
     padding: 4% 5%;
     gap: 0.5rem;
     line-height: 0.8;
+    height: auto;
+    
     
 }
 .card p{
@@ -106,7 +108,11 @@
 .card-info > p , span{
     background: transparent;
 }
-
+.card-info span{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 1.2rem;
+}
 
 .card button{
     width: 100%;
@@ -226,6 +232,12 @@ dialog::backdrop{
     transform: scale(1.03);
    border: white;
     box-shadow: 1px 1px 1px rgba(20, 20, 20, 0.2 );
+}
+
+.wrap{
+    overflow: auto;
+    height: auto;
+    width: inherit;
 }
 
 @media (max-width: 1100px) {
